<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_color"
    tools:context=".UserProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="Profile"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_name"
                android:inputType="text"
                android:minHeight="50dp"
                android:textColorHint="#919191"
                android:textColor="@android:color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:minHeight="50dp"
                android:textColorHint="#919191"
                android:textColor="@android:color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Submit" />

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sign up" />

    </LinearLayout>

    <View
        android:id="@+id/blueRectangle"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shadowed_background" />

    <ImageButton
        android:id="@+id/button_1id"
        android:layout_width="110dp"
        android:layout_height="78dp"
        android:layout_above="@id/blueRectangle"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="91dp"
        android:layout_marginEnd="210dp"
        android:layout_marginBottom="-7dp"
        android:backgroundTint="#3A0073"
        android:contentDescription="@string/description"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/scale" />

    <ImageButton
        android:id="@+id/button_2id"
        android:layout_width="116dp"
        android:layout_height="78dp"
        android:layout_above="@id/blueRectangle"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="185dp"
        android:layout_marginEnd="109dp"
        android:layout_marginBottom="-6dp"
        android:backgroundTint="#3A0073"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/steps" />

    <ImageButton
        android:id="@+id/button_3id"
        android:layout_width="72dp"
        android:layout_height="37dp"
        android:layout_above="@id/blueRectangle"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="694dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="0dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/dumbell" />

    <ImageButton
        android:id="@+id/button_4id"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/blueRectangle"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="687dp"
        android:layout_marginEnd="324dp"
        android:layout_marginBottom="-4dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/user_pic" />

</RelativeLayout>
